// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-menu keyboard navigation should manage keyboard navigation 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu keyboard navigation should manage keyboard navigation 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu keyboard navigation should manage keyboard navigation 3`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu keyboard navigation should manage keyboard navigation 4`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template false 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template false 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template false 3`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template false 4`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template false 5`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="active">
        <mock:shadow-root>
          <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
            <span class="mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="2" menu-index="0" role="menuitem" status="active">
            <mock:shadow-root>
              <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-text" title="child">
                  child
                </div>
                <slot name="information"></slot>
              </button>
              <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
                <slot></slot>
              </div>
            </mock:shadow-root>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template false 6`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="active">
        <mock:shadow-root>
          <button aria-current="page" aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
            <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="2" menu-index="0" role="menuitem" status="active">
            <mock:shadow-root>
              <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-text" title="child">
                  child
                </div>
                <slot name="information"></slot>
              </button>
              <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
                <slot></slot>
              </div>
            </mock:shadow-root>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template false 7`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <div hidden="">
      <h3>
        Demo title
      </h3>
      <p>
        some content
      </p>
    </div>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template false 8`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <div>
      <h3>
        Demo title
      </h3>
      <p>
        some content
      </p>
    </div>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template true 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template true 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template true 3`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template true 4`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template true 5`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="active">
        <mock:shadow-root>
          <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
            <span class="mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="2" menu-index="0" role="menuitem" status="active">
            <mock:shadow-root>
              <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-text" title="child">
                  child
                </div>
                <slot name="information"></slot>
              </button>
              <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
                <slot></slot>
              </div>
            </mock:shadow-root>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template true 6`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="active">
        <mock:shadow-root>
          <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
            <span class="mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="2" menu-index="0" role="menuitem" status="active">
            <mock:shadow-root>
              <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-text" title="child">
                  child
                </div>
                <slot name="information"></slot>
              </button>
              <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
                <slot></slot>
              </div>
            </mock:shadow-root>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template true 7`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <div hidden="">
      <h3>
        Demo title
      </h3>
      <p>
        some content
      </p>
    </div>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template true 8`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <div hidden="">
      <h3>
        Demo title
      </h3>
      <p>
        some content
      </p>
    </div>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template undefined 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template undefined 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template undefined 3`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template undefined 4`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template undefined 5`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="active">
        <mock:shadow-root>
          <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
            <span class="mg-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="2" menu-index="0" role="menuitem" status="active">
            <mock:shadow-root>
              <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-text" title="child">
                  child
                </div>
                <slot name="information"></slot>
              </button>
              <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
                <slot></slot>
              </div>
            </mock:shadow-root>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template undefined 6`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="active">
        <mock:shadow-root>
          <button aria-current="page" aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
            <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
              <mg-icon icon="chevron-down"></mg-icon>
            </span>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="2" menu-index="0" role="menuitem" status="active">
            <mock:shadow-root>
              <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="child" tabindex="0">
                <slot name="illustration"></slot>
                <div class="mg-menu-item__navigation-button-text" title="child">
                  child
                </div>
                <slot name="information"></slot>
              </button>
              <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
                <slot></slot>
              </div>
            </mock:shadow-root>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template undefined 7`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <div hidden="">
      <h3>
        Demo title
      </h3>
      <p>
        some content
      </p>
    </div>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mouse navigation should manage toggle expand with template undefined 8`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <div>
      <h3>
        Demo title
      </h3>
      <p>
        some content
      </p>
    </div>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with 2 menu-items, last items get style modifier 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal mg-menu-item--last" menu-index="1" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="last-item" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="last-item">
          last-item
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with args {
  identifier: 'batman',
  label: 'batman',
  icon: [Object],
  badge: [Object]
} 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with args { identifier: 'batman', label: 'batman' } 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with args { identifier: 'batman', label: 'batman', badge: [Object] } 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with args { identifier: 'batman', label: 'batman', href: '#link' } 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <a aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" href="#link" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </a>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with args { identifier: 'batman', label: 'batman', icon: [Object] } 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded and sub-menu false 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded and sub-menu false 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded and sub-menu true 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded and sub-menu true 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded and sub-menu undefined 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" hidden="" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded and sub-menu undefined 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="true" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
        <span class="mg-menu-item__navigation-button-chevron mg-menu-item__navigation-button-chevron--rotate">
          <mg-icon icon="chevron-down"></mg-icon>
        </span>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <mg-menu aria-label="child-menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menu">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" data-level="1" menu-index="0" role="menuitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="child" tabindex="0">
            <slot name="illustration"></slot>
            <div class="mg-menu-item__navigation-button-text" title="child">
              child
            </div>
            <slot name="information"></slot>
          </button>
          <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
            <slot></slot>
          </div>
        </mock:shadow-root>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded false 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded false 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded true 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded true 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded undefined 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with expanded undefined 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="true" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with menuIndex 0 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with menuIndex 5 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with menuIndex undefined 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with size large 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" sizes="large" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with size medium 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" sizes="medium" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with size regular 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" sizes="regular" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with status active 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with status active 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with status disabled 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="disabled">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--disabled mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="-1">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with status disabled 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with status hidden 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="hidden">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--hidden mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="-1">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with status hidden 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with status visible 1`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large mg-menu-item__navigation-button--visible" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu render with status visible 2`] = `
<mg-menu aria-label="menu" classlist="mg-menu mg-menu--horizontal" direction="horizontal" role="menubar">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item aria-haspopup="false" class="mg-menu-item mg-menu-item--horizontal" menu-index="0" role="menuitem" status="active">
    <mock:shadow-root>
      <button aria-current="page" aria-expanded="false" class="mg-menu-item__navigation-button mg-menu-item__navigation-button--active mg-menu-item__navigation-button--horizontal mg-menu-item__navigation-button--size-large" id="batman" tabindex="0">
        <slot name="illustration"></slot>
        <div class="mg-menu-item__navigation-button-text" title="batman">
          batman
        </div>
        <slot name="information"></slot>
      </button>
      <div class="mg-menu-item__collapse-container mg-menu-item__collapse-container--first-level">
        <slot></slot>
      </div>
    </mock:shadow-root>
  </mg-menu-item>
</mg-menu>
`;
